@@ -7,6 +7,8 @@ package io.airbyte.workers.process;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.when;
 
@@ -18,16 +20,27 @@ import io.airbyte.commons.json.Jsons;
 import io.airbyte.config.EnvConfigs;
 import io.airbyte.workers.WorkerConfigs;
 import io.airbyte.workers.WorkerUtils;
+import io.airbyte.workers.config.WorkerConfigsProvider;
+import io.airbyte.workers.config.WorkerConfigsProvider.ResourceType;
 import io.airbyte.workers.exception.WorkerException;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.Duration;
+import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Stream;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.RandomStringUtils;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtensionContext;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.ArgumentsProvider;
+import org.junit.jupiter.params.provider.ArgumentsSource;
 
 // todo (cgardens) - these are not truly "unit" tests as they are check resources on the internet.
 // we should move them to "integration" tests, when we have facility to do so.
@@ -66,7 +79,7 @@ class DockerProcessFactoryTest {
   void testImageExists() throws IOException, WorkerException {
     final Path workspaceRoot = Files.createTempDirectory(Files.createDirectories(TEST_ROOT), PROCESS_FACTORY);
 
-    final DockerProcessFactory processFactory = new DockerProcessFactory(new WorkerConfigs(new EnvConfigs()), workspaceRoot, null, null, null);
+    final DockerProcessFactory processFactory = new DockerProcessFactory(createConfigProviderStub(), workspaceRoot, null, null, null);
     assertTrue(processFactory.checkImageExists(BUSYBOX));
   }
 
@@ -74,7 +87,7 @@ class DockerProcessFactoryTest {
   void testImageDoesNotExist() throws IOException, WorkerException {
     final Path workspaceRoot = Files.createTempDirectory(Files.createDirectories(TEST_ROOT), PROCESS_FACTORY);
 
-    final DockerProcessFactory processFactory = new DockerProcessFactory(new WorkerConfigs(new EnvConfigs()), workspaceRoot, null, null, null);
+    final DockerProcessFactory processFactory = new DockerProcessFactory(createConfigProviderStub(), workspaceRoot, null, null, null);
     assertFalse(processFactory.checkImageExists("airbyte/fake:0.1.2"));
   }
 
@@ -84,13 +97,14 @@ class DockerProcessFactoryTest {
     final Path jobRoot = workspaceRoot.resolve("job");
 
     final DockerProcessFactory processFactory =
-        new DockerProcessFactory(new WorkerConfigs(new EnvConfigs()), workspaceRoot, null, null, null);
-    processFactory.create("tester", "job_id", 0, jobRoot, BUSYBOX, false, false, ImmutableMap.of("config.json", "{\"data\": 2}"), "echo hi",
-        new WorkerConfigs(new EnvConfigs()).getResourceRequirements(), null, Map.of(), Map.of(), Map.of());
+        new DockerProcessFactory(createConfigProviderStub(), workspaceRoot, null, null, null);
+    processFactory.create(ResourceType.DEFAULT, "tester", "job_id", 0, jobRoot, BUSYBOX, false, false,
+        ImmutableMap.of("config.json", "{\"data\": 2}"),
+        "echo hi", new WorkerConfigs(new EnvConfigs()).getResourceRequirements(), null, Map.of(), Map.of(), Map.of(), Collections.emptyMap());
 
     assertEquals(
         Jsons.jsonNode(ImmutableMap.of("data", 2)),
-        Jsons.deserialize(IOs.readFile(jobRoot, "config.json")));
+        Jsons.deserialize(IOs.readFile(jobRoot.resolve("config.json"))));
   }
 
   /**
@@ -103,10 +117,11 @@ class DockerProcessFactoryTest {
 
     final WorkerConfigs workerConfigs = spy(new WorkerConfigs(new EnvConfigs()));
     when(workerConfigs.getEnvMap()).thenReturn(Map.of("ENV_VAR_1", "ENV_VALUE_1"));
+    when(workerConfigs.getEnvMap()).thenReturn(Map.of("ENV_VAR_1", "ENV_VALUE_1"));
 
     final DockerProcessFactory processFactory =
         new DockerProcessFactory(
-            workerConfigs,
+            createConfigProviderStub(workerConfigs),
             workspaceRoot,
             null,
             null,
@@ -115,6 +130,7 @@ class DockerProcessFactoryTest {
     waitForDockerToInitialize(processFactory, jobRoot, workerConfigs);
 
     final Process process = processFactory.create(
+        ResourceType.DEFAULT,
         "tester",
         "job_id",
         0,
@@ -129,7 +145,7 @@ class DockerProcessFactoryTest {
         Map.of(),
         Map.of(),
         Map.of(),
-        "-c",
+        Collections.emptyMap(), "-c",
         "echo ENV_VAR_1=$ENV_VAR_1");
 
     final StringBuilder out = new StringBuilder();
@@ -149,6 +165,7 @@ class DockerProcessFactoryTest {
 
     while (stopwatch.elapsed().compareTo(Duration.ofSeconds(30)) < 0) {
       final Process p = processFactory.create(
+          ResourceType.DEFAULT,
           "tester",
           "job_id_" + RandomStringUtils.randomAlphabetic(4),
           0,
@@ -163,7 +180,7 @@ class DockerProcessFactoryTest {
           Map.of(),
           Map.of(),
           Map.of(),
-          "-c",
+          Collections.emptyMap(), "-c",
           "echo ENV_VAR_1=$ENV_VAR_1");
       p.waitFor();
       final int exitStatus = p.exitValue();
@@ -175,6 +192,51 @@ class DockerProcessFactoryTest {
     }
 
     throw new RuntimeException("Failed to run test docker command after timeout.");
+  }
+
+  static class DebuggingOptionsTestArgumentsProvider implements ArgumentsProvider {
+
+    @Override
+    public Stream<? extends Arguments> provideArguments(ExtensionContext extensionContext) {
+      final String options = "OPTIONS";
+      final String postgresLatest = "repo/project/destination-postgres:latest";
+      final String destinationPostgres5005 = "destination-postgres:5005";
+      return Stream.of(
+          Arguments.of(postgresLatest, destinationPostgres5005, options,
+              List.of("-e", "JAVA_TOOL_OPTIONS=OPTIONS:5005", "-p5005:5005")),
+          Arguments.of("repo/project/destination-bigquery:latest", destinationPostgres5005, options, Collections.emptyList()),
+          Arguments.of(postgresLatest, "destination-postgres:5005,source-postgres:5010", options,
+              List.of("-e", "JAVA_TOOL_OPTIONS=OPTIONS:5005", "-p5005:5005")),
+          Arguments.of("repo/project/source-postgres:latest", "destination-postgres:5005,source-postgres:5010", options,
+              List.of("-e", "JAVA_TOOL_OPTIONS=OPTIONS:5010", "-p5010:5010")),
+          Arguments.of(postgresLatest, null, options, Collections.emptyList()),
+          // This is the case we'd expect to see in production, no environment variables present
+          Arguments.of(postgresLatest, null, null, Collections.emptyList()),
+          Arguments.of(postgresLatest, destinationPostgres5005, null, Collections.emptyList()),
+          Arguments.of(postgresLatest, "an-obviously-bad-value", options, Collections.emptyList()),
+          Arguments.of(postgresLatest, "destination-postgres:a-bad-middle:5005", options, Collections.emptyList()));
+    }
+
+  }
+
+  private WorkerConfigsProvider createConfigProviderStub() {
+    return createConfigProviderStub(new WorkerConfigs(new EnvConfigs()));
+  }
+
+  private WorkerConfigsProvider createConfigProviderStub(final WorkerConfigs workerConfigs) {
+    final WorkerConfigsProvider workerConfigsProvider = mock(WorkerConfigsProvider.class);
+    when(workerConfigsProvider.getConfig(any())).thenReturn(workerConfigs);
+    return workerConfigsProvider;
+  }
+
+  @ParameterizedTest
+  @ArgumentsSource(DebuggingOptionsTestArgumentsProvider.class)
+  void testLocalDebuggingOptions(final String containerName,
+                                 final String debugContainerEnvVar,
+                                 final String javaOptions,
+                                 final List<String> expected) {
+    List<String> actual = DockerProcessFactory.localDebuggingOptions(containerName, debugContainerEnvVar, javaOptions);
+    Assertions.assertEquals(actual, expected);
   }
 
 }
